# rv32i-simulator

./: .clang-format  .gitignore  CMakeLists.txt
include/: cpu.hpp  decoder.hpp  elf_loader.hpp  execute.hpp  machine.hpp  memory.hpp  types.hpp
source/: cpu.cpp  decoder.cpp  elf_loader.cpp  execute.cpp  machine.cpp  main.cpp
tests/binaries/: hello_text.s  test_add_qemu_2.S  test_branch.S  test_mem.S
